--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <p class="text-gray-400 mt-2">Analise e projete cenários de vendas e lucratividade.</p>
         </header>
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8">
+        <main class="flex flex-col lg:flex-row gap-8">
             <!-- Coluna de Inputs -->
-            <div class="space-y-6">
+            <section class="space-y-6 lg:w-5/12">
                 <div class="bg-gray-800 p-6 rounded-xl shadow-2xl">
                     <h2 class="text-2xl font-semibold mb-6 text-sky-300 border-b border-gray-700 pb-3">Parâmetros Base</h2>
                     <div class="space-y-4">
@@ -94,10 +94,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Coluna de Outputs -->
-            <div class="bg-gray-800 p-6 rounded-xl shadow-2xl">
+            <section class="bg-gray-800 p-6 rounded-xl shadow-2xl lg:flex-1 lg:sticky lg:top-8">
                 <h2 class="text-2xl font-semibold mb-6 text-sky-300 border-b border-gray-700 pb-3">Resultados do Cenário</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-6 gap-y-5 text-sm">
                     <div class="p-3 bg-gray-700 rounded-lg">
@@ -141,8 +141,8 @@
                         <span id="outputDiffMeta" class="text-lg font-semibold"></span> <!-- Cor dinâmica no JS -->
                     </div>
                 </div>
-            </div>
-        </div>
+            </section>
+        </main>
     </div>
 
     <footer class="text-center p-4 text-gray-500 text-sm">
